<resources>
    <string name="app_name">Your Kitchen</string>
    <string name="back">Back</string>
    <string name="browse_public_recipes">Browse public recipes</string>
    <string name="browsing_public_recipes">Browsing public recipes</string>
    <string name="calories">Calories: %1$d per serving</string>
    <string name="calories_no_info">Calories</string>
    <string name="cancel">Cancel</string>
    <string name="checkMark">\u2713</string>
    <string name="close">Close</string>
    <string name="cost">Cost: $%.2f to make</string>
    <string name="cost_no_info">Cost</string>
    <string name="delete">Delete</string>
    <string name="done">done</string>
    <string name="download">Download</string>
    <string name="downloading_recipe">Downloading Recipe </string>
    <string name="edit">Edit</string>
    <string name="editTagsHint">add/edit tag (blank to delete)</string>
    <string name="estimated_calories">Estimated Calories</string>
    <string name="estimated_cost">Estimated Cost</string>
    <string name="estimated_time">Estimated Time: %1$d minutes</string>
    <string name="estimated_time_no_info">Estimated Time</string>
    <string name="ingredients">Ingredients:</string>
    <string name="new_instruction">new instruction</string>
    <string name="instructions">Instructions:</string>
    <string name="manage_timers">Manage timers</string>
    <string name="minus">-</string>
    <string name="new_blank_recipe">new blank recipe</string>
    <string name="new_ingredient">new ingredient</string>
    <string name="new_recipe">New Recipe</string>
    <string name="new_tag">new tag</string>
    <string name="noPlus">\'+\' is not an allowed tag</string>
    <string name="pause">pause</string>
    <string name="picture">Picture</string>
    <string name="plus">+</string>
    <string name="public_stats">public stats</string>
    <string name="publish_recipe">Publish Recipe</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="recipe_saved_changes">Saved changes to recipe</string>
    <string name="resume">resume</string>
    <string name="sample_ingredient">Sample Ingredient</string>
    <string name="save_changes">Save changes</string>
    <string name="serving_size">Serving Size: %1$d servings</string>
    <string name="serving_size_no_info">Serving Size</string>
    <string name="time_remaining">Time Remaining: </string>
    <string name="timer_name">Timer name</string>
    <string name="time_to_make">Time to make</string>
    <string name="x">X</string>
</resources>
