<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/publicLayout"
    android:background="@drawable/gradient_1"
    tools:context="com.wwu.myapplication.publicRecipesPage">


    <LinearLayout
        android:id="@+id/LinearLayoutForPublicMisc"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/buttonToHomePage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.96"
            android:layout_marginStart="5dp"
            android:background="@drawable/rounded_button"
            android:text="@string/back" />

        <TextView
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="monospace"
            android:text="@string/browsing_public_recipes"
            android:textColor="#FCF7FF"
            android:textSize="15sp"
            android:layout_weight="0.5"
            android:gravity="center_horizontal"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonToManageTimers"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_marginEnd="5dp"
            android:background="@drawable/rounded_button"
            android:text="@string/manage_timers" />


    </LinearLayout>





    <LinearLayout
        android:id="@+id/LinearLayoutForPublicTagsGroup"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="5dp"
        android:layout_marginTop="50dp">

        <ListView
            android:id="@+id/publicTagsList"
            android:layout_width="150dp"
            android:layout_height="262dp"
            android:divider="@color/colorBlack"
            android:background="@drawable/rounded_border"
            android:dividerHeight="2dp" />


        <Button
            android:id="@+id/buttonToEditTagsPublic"
            android:layout_width="37dp"
            android:layout_height="37dp"
            android:visibility="invisible"
            android:text="@string/checkMark" />

        <EditText
            android:id="@+id/editTextForTagsPublic"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/editTagsHint"
            android:visibility="invisible"
            android:imeOptions="actionDone"
            android:singleLine="true"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/LinearLayoutForPublicRecipeList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="388dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp">

        <ListView
            android:id="@+id/publicRecipeList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@color/colorBlack"
            android:dividerHeight="2dp"
            android:layout_gravity="bottom"
            android:background="@drawable/rounded_border_top" />


    </LinearLayout>






</android.support.constraint.ConstraintLayout>
