<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_1"
    tools:layout_editor_absoluteY="25dp">


    <Button
        android:id="@+id/buttonToPublicPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/back"
        android:background="@drawable/rounded_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/downloadButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="16dp"
        android:text="@string/download"
        android:background="@drawable/rounded_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/linearLayout10"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonToPublicPage">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="30dp"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="5dp"
            tools:layout_editor_absoluteY="70dp">

            <ImageView
                android:id="@+id/recipePicture"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_weight="1"
                android:adjustViewBounds="false"
                android:background="@drawable/border"
                android:contentDescription="@string/picture"
                app:srcCompat="@android:drawable/ic_input_add"
                tools:layout_editor_absoluteX="30dp"
                tools:layout_editor_absoluteY="80dp" />

            <TextView
                android:id="@+id/recipeName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:background="@drawable/border"
                android:contentDescription="@string/recipe_name"
                android:maxHeight="45dp"
                android:maxWidth="265dp"
                android:minHeight="20dp"
                android:minWidth="50dp"
                android:text="@string/recipe_name"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                android:textSize="20sp"
                android:padding="10dip"
                android:textAlignment="center"
                tools:layout_editor_absoluteX="30dp"
                tools:layout_editor_absoluteY="335dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="290dp"
            tools:layout_editor_absoluteY="60dp">

            <TextView
                android:id="@+id/publicStats"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@color/colorWhite"
                android:contentDescription="@string/public_stats"
                android:text="@string/public_stats" />

            <TextView
                android:id="@+id/servingSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@color/colorWhite"
                android:contentDescription="@string/serving_size_no_info"
                android:gravity="start|center"
                android:text="@string/serving_size_no_info"
                android:textAlignment="center"
                android:textColor="@color/colorBlack"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/publicRecipeCalories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@color/colorWhite"
                android:contentDescription="@string/calories_no_info"
                android:gravity="start|center"
                android:text="@string/calories_no_info"
                android:textAlignment="center"
                android:textColor="@color/colorBlack"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/publicRecipeCost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@color/colorWhite"
                android:contentDescription="@string/cost_no_info"
                android:gravity="start|center"
                android:text="@string/cost_no_info"
                android:textAlignment="center"
                android:textColor="@color/colorBlack"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/estimatedTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:background="@color/colorWhite"
                android:contentDescription="@string/estimated_time_no_info"
                android:gravity="start|center"
                android:text="@string/estimated_time_no_info"
                android:textAlignment="center"
                android:textColor="@color/colorBlack"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout11"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="14dp"
        android:layout_marginTop="23dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout10"
        app:layout_constraintVertical_bias="0.0"
        android:baselineAligned="false">


        <LinearLayout
            android:id="@+id/ingredient_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="30dp"
            android:layout_weight="1.10"
            android:background="@drawable/border"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="30dp"
            tools:layout_editor_absoluteY="367dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/ingredients"
                android:textSize="18sp" />

            <include
                layout="@layout/ingredient_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/instructions_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="290dp"
            tools:layout_editor_absoluteY="367dp">

            <TextView
                android:id="@+id/public_recipe_label_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/instructions"
                android:padding="5dp"
                android:textSize="18sp" />

            <ListView
                android:id="@+id/public_recipe_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>